--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -48,9 +48,9 @@ jobs:
             - id: get-acr-creds
               name: Get ACR credentials
               run: |
-                az acr update -n ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} --admin-enabled true
-                ACR_USERNAME=$(az acr credential show -g ${{ env.RESOURCE_GROUP }} -n ${{ env.AZURE_CONTAINER_REGISTRY }} --query username -o tsv)
-                ACR_PASSWORD=$(az acr credential show -g ${{ env.RESOURCE_GROUP }} -n ${{ env.AZURE_CONTAINER_REGISTRY }} --query passwords[0].value -o tsv)
+                az acr update -n ${{ env.AZURE_CONTAINER_REGISTRY }} -g draft-super --admin-enabled true
+                ACR_USERNAME=$(az acr credential show -g draft-super -n ${{ env.AZURE_CONTAINER_REGISTRY }} --query username -o tsv)
+                ACR_PASSWORD=$(az acr credential show -g draft-super -n ${{ env.AZURE_CONTAINER_REGISTRY }} --query passwords[0].value -o tsv)
                 echo "::add-mask::${ACR_USERNAME}"
                 echo "::set-output name=username::${ACR_USERNAME}"
                 echo "::add-mask::${ACR_PASSWORD}"
