--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kubernetes.azure.com/ingress-host: draft.baeke.info
+    kubernetes.azure.com/tls-cert-keyvault-uri: https://kvdraft.vault.azure.net/certificates/mycert/7f5607fd5bba4d118ba95a153ed6eb05
+  creationTimestamp: null
   name: super-api
 spec:
-  type: LoadBalancer
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 8080
   selector:
     app: super-api
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
+  type: ClusterIP
+status:
+  loadBalancer: {}
