--- a/charts/production.yaml
+++ b/charts/production.yaml
@@ -3,6 +3,8 @@ imageKey:
     pullPolicy: IfNotPresent
     tag: latest
 service:
-    annotations: {}
-    type: LoadBalancer
+    annotations:
+        kubernetes.azure.com/ingress-host: app.20.126.211.103.nip.io
+        kubernetes.azure.com/tls-cert-keyvault-uri: https://kvdraft.vault.azure.net/certificates/mycert/206b037cefe34d97a690ffeb13113ca4
+    type: ClusterIP
     port: "80"
