--- a/charts/production.yaml
+++ b/charts/production.yaml
@@ -3,9 +3,6 @@ imageKey:
     pullPolicy: IfNotPresent
     tag: latest
 service:
-    annotations:
-        kubernetes.azure.com/ingress-host: app.20.31.139.185.nip.io
-        kubernetes.azure.com/tls-cert-keyvault-uri: https://kvdraft.vault.azure.net/certificates/mycert/61c8aa9513474296a15ffb2b5e6f8c76
-    type: ClusterIP
+    annotations: {}
+    type: LoadBalancer
     port: "80"
-replicaCount: 3
